--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ MONGODB_URI=mongodb://localhost:27017/devSkyy
 DATABASE_NAME=devSkyy
 
 # Application Settings
-ENVIRONMENT=development
+# Set ENVIRONMENT=production in production deployments
 DEBUG=true
 SECRET_KEY=your_secret_key_here_change_in_production
 API_HOST=0.0.0.0
