--- a/requirements.txt
+++ b/requirements.txt
@@ -196,7 +196,7 @@ pydantic-openapi-schema==1.5.1
 pycryptodome==3.21.0  # Encryption
 # python-owasp==1.4.0  # OWASP tools - Package does not exist in PyPI
 pyotp==2.9.0  # 2FA/MFA
-python-secrets==25.2.0  # Secrets management
+python-secrets==24.10.12  # Secrets management (latest available for Python 3.11)
 
 # Enterprise Monitoring
 datadog==0.50.2
