--- a/requirements.txt
+++ b/requirements.txt
@@ -43,8 +43,8 @@ safety==3.2.11  # Vulnerability scanning
 anthropic==0.69.0  # Latest version
 openai==2.3.0  # Latest version
 transformers==4.47.1  # Updated
-torch==2.2.2  # KNOWN VULNERABILITY: PYSEC-2025-41 (RCE) - Fix version 2.6.0 not yet released on PyPI
-torchvision==0.18.1  # Matching torch 2.2.2 compatibility
+torch==2.3.1  # Updated for torchvision compatibility. KNOWN VULNERABILITY: PYSEC-2025-41 (RCE) - Fix version 2.6.0 not yet released
+torchvision==0.18.1  # Requires torch==2.3.1
 # MITIGATION: Only load models from trusted sources, never use torch.load() with untrusted data
 diffusers==0.31.0
 sentence-transformers==3.3.1
