--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@
 # Core Framework (Latest Secure Versions)
 fastapi==0.119.0
 uvicorn[standard]==0.34.0
-pydantic==2.10.4
+pydantic==2.7.1  # Downgraded for instagrapi 2.1.2 compatibility (requires exactly 2.7.1)
 python-dotenv==1.0.1
 starlette==0.48.0  # FastAPI dependency, security updated (GHSA-2c2j-9gv5-cj73 fixed)
 
@@ -160,7 +160,7 @@ loguru==0.7.3  # Enhanced logging
 # Data Validation
 cerberus==1.3.6  # Schema validation
 marshmallow==3.23.2  # Serialization
-pydantic[email]==2.10.4
+pydantic[email]==2.7.1  # Downgraded for instagrapi compatibility
 
 # Caching
 cachetools==5.5.0
