Complete repository: Fill all missing files and verify deployment readiness
## Summary
Completed comprehensive repository scan and filled all missing files that were
referenced in __init__.py but not implemented. Added 9 new production-ready
modules (2,715 lines of code) and created deployment verification infrastructure.

## New E-Commerce Modules (3 files, 1,205 lines)
✅ agent/ecommerce/analytics_engine.py (360 lines)
   - Revenue and sales analytics
   - Customer behavior tracking
   - Product performance metrics
   - Conversion funnel analysis
   - Marketing campaign ROI
   - Predictive analytics

✅ agent/ecommerce/customer_intelligence.py (445 lines)
   - ML-powered customer segmentation
   - Lifetime value prediction
   - Churn prediction and prevention
   - Purchase behavior analysis
   - Personalized recommendations
   - Customer journey mapping

✅ agent/ecommerce/order_automation.py (400 lines)
   - Automated order processing
   - Intelligent order routing
   - Inventory allocation
   - Shipping optimization
   - Fraud detection
   - Returns and refunds automation

## New WordPress Modules (2 files, 1,020 lines)
✅ agent/wordpress/content_generator.py (440 lines)
   - AI-powered content creation using Claude
   - Blog post generation
   - Page content creation (about, contact, services, FAQ, privacy)
   - SEO-optimized content
   - Meta description generation
   - Content rewriting and optimization

✅ agent/wordpress/seo_optimizer.py (580 lines)
   - Comprehensive SEO optimization
   - On-page SEO analysis
   - Technical SEO audits
   - Schema markup generation (Article, Product, Organization, Breadcrumb)
   - Sitemap generation
   - SEO scoring and recommendations
   - Keyword analysis
   - robots.txt generation

## New ML Model Modules (4 files, 490 lines)
✅ agent/ml_models/forecasting_engine.py (340 lines)
   - Time series prediction
   - Demand forecasting with multiple algorithms (linear, RF, seasonal)
   - Trend analysis and seasonality detection
   - 

--- a/requirements.txt
+++ b/requirements.txt
@@ -142,6 +142,7 @@ optuna==4.1.0  # Hyperparameter optimization
 mlflow==3.1.0  # ML lifecycle - Security fixes: PYSEC-2025-52, CSRF still present (need 2.20.3 for full fix)
 # KNOWN VULNERABILITY: GHSA-wf7f-8fxf-xfxc (RCE via malicious PyTorch model) - No fix available
 # MITIGATION: Never load untrusted PyTorch models
+shap==0.46.0  # Model explainability - SHAP values for interpretability
 
 # Code Analysis
 astroid==3.3.8  # Updated
