--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,20 @@
+# ============================================================================
+# DevSkyy Enterprise Platform - Docker Compose Configuration
+# Enhanced with CI/CD integration and monitoring
+# ============================================================================
+
+version: '3.8'
+
 services:
-  # DevSkyy API
+  # DevSkyy API - Enhanced with CI/CD build args
   api:
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+        PYTHON_VERSION: 3.11
+        BUILD_DATE: ${BUILD_DATE:-$(date -u +'%Y-%m-%dT%H:%M:%SZ')}
+        VCS_REF: ${VCS_REF:-$(git rev-parse HEAD)}
     container_name: devskyy-api
     restart: unless-stopped
     ports:
