--- a/.github/workflows/comprehensive-testing.yml
+++ b/.github/workflows/comprehensive-testing.yml
@@ -175,8 +175,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install -r requirements-test.txt
-          pip install pytest-cov pytest-xdist pytest-mock pytest-asyncio
+          pip install pytest pytest-cov pytest-asyncio pytest-mock
       
       - name: 🧪 Run Unit Tests - ${{ matrix.test-group }}
         run: |
