--- a/requirements.txt
+++ b/requirements.txt
@@ -51,7 +51,7 @@ sentence-transformers==3.3.1
 scikit-learn==1.5.2
 numpy==1.26.4  # Compatible version
 pandas==2.2.3
-tensorflow==2.16.2  # Latest available for Python 3.11
+# tensorflow==2.16.2  # Disabled due to system compatibility issues - will re-enable in Phase 3
 xgboost==2.1.3
 lightgbm==4.5.0
 
