🚀 VERCEL INTEGRATION: Add Comprehensive Deployment Status Notifications
✅ VERCEL DEPLOYMENT NOTIFICATIONS IMPLEMENTED:

🔔 WORKFLOW STATUS NOTIFICATIONS:
• Added 'Notify Vercel - Test Status' to test job with 'Vercel - dev-skyy: tests'
• Added 'Notify Vercel - Lint Status' to lint job with 'Vercel - dev-skyy: lint'
• Added 'Notify Vercel - Security Status' to security job with 'Vercel - dev-skyy: security'
• Added 'Notify Vercel - Build Status' to build job with 'Vercel - dev-skyy: build'
• Added 'Notify Vercel - Deploy Status' to deploy job with 'Vercel - dev-skyy: deploy'

🚀 COMPREHENSIVE VERCEL INTEGRATION:
• Created vercel-integration.yml for dedicated Vercel deployment pipeline
• Added preview deployment workflow for pull requests
• Added production deployment workflow for main branch pushes
• Implemented proper Vercel CLI integration with environment management

📊 DEPLOYMENT STATUS MONITORING:
• Created deployment-status.yml for workflow completion notifications
• Added post-deployment health check automation
• Implemented comprehensive status reporting across all pipeline stages
• Added 'if: always()' conditions to ensure notifications run regardless of job status

🔧 VERCEL CONFIGURATION FEATURES:
• Automatic preview deployments for pull requests
• Production deployments triggered on main branch
• Environment-specific build configurations
• Proper secret management for VERCEL_TOKEN, VERCEL_ORG_ID, VERCEL_PROJECT_ID

🎯 STATUS CHECK INTEGRATION:
• Real-time deployment status updates to Vercel dashboard
• Comprehensive pipeline stage tracking
• Health check validation post-deployment
• Multi-workflow coordination and status aggregation

📈 DEPLOYMENT PIPELINE BENEFITS:
• Automatic Vercel deployment status updates
• Real-time visibility into CI/CD pipeline progress
• Seamless integration between GitHub Actions and Vercel
• Comprehensive deployment health monitoring

RESULT: 🎯 VERCEL DEPLOYMENT CHECKS FULLY INTEGRATED
GitHub Actions workflows now automatically updat

--- a/.github/workflows/comprehensive-testing.yml
+++ b/.github/workflows/comprehensive-testing.yml
@@ -39,6 +39,12 @@ jobs:
         with:
           file: ./coverage.xml
           fail_ci_if_error: false
+
+      - name: 'Notify Vercel - Test Status'
+        uses: 'vercel/repository-dispatch/actions/status@v1'
+        with:
+          name: 'Vercel - dev-skyy: tests'
+        if: always()
   lint:
     name: Code Quality
     runs-on: ubuntu-latest
@@ -67,6 +73,12 @@ jobs:
 
       - name: Type check (mypy)
         run: mypy . --ignore-missing-imports || true
+
+      - name: 'Notify Vercel - Lint Status'
+        uses: 'vercel/repository-dispatch/actions/status@v1'
+        with:
+          name: 'Vercel - dev-skyy: lint'
+        if: always()
 
   security:
     name: Security Scan
@@ -103,6 +115,12 @@ jobs:
             pip-audit-report.json
             safety-report.json
 
+      - name: 'Notify Vercel - Security Status'
+        uses: 'vercel/repository-dispatch/actions/status@v1'
+        with:
+          name: 'Vercel - dev-skyy: security'
+        if: always()
+
   build:
     name: Build Docker Image
     runs-on: ubuntu-latest
@@ -123,6 +141,12 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
+      - name: 'Notify Vercel - Build Status'
+        uses: 'vercel/repository-dispatch/actions/status@v1'
+        with:
+          name: 'Vercel - dev-skyy: build'
+        if: always()
+
   deploy:
     name: Deploy to Production
     runs-on: ubuntu-latest
@@ -134,6 +158,12 @@ jobs:
 
       - name: Deploy notification
         run: echo "🚀 Ready to deploy to production"
+
+      - name: 'Notify Vercel - Deploy Status'
+        uses: 'vercel/repository-dispatch/actions/status@v1'
+        with:
+          name: 'Vercel - dev-skyy: deploy'
+        if: always()
 
       # Add your deployment steps here
       # Example for Railway:
