--- a/requirements.vercel.txt
+++ b/requirements.vercel.txt
@@ -5,11 +5,12 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 
-# Essential Dependencies
-pydantic==2.5.0
+# Essential Dependencies with Email Support
+pydantic[email]==2.7.4
 python-multipart==0.0.6
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
+email-validator==2.1.0
 
 # Database (Lightweight)
 sqlalchemy==2.0.23
@@ -21,18 +22,15 @@ requests==2.31.0
 
 # Logging and Monitoring
 structlog==23.2.0
-prometheus-client==0.19.0
 
 # Security
 cryptography==41.0.8
 
 # Utilities
-python-dotenv==1.0.0
-email-validator==2.1.0
+python-dotenv==1.0.1
 
-# Optional: Lightweight ML (if needed)
-# scikit-learn==1.3.2
-# pandas==2.1.4
+# Redis (Optional - for caching)
+redis==5.0.1
 
 # Note: Heavy dependencies like TensorFlow, PyTorch are excluded
 # for optimal serverless performance and faster cold starts
