--- a/.env.example
+++ b/.env.example
@@ -40,7 +40,7 @@ MISTRAL_API_KEY=your_mistral_api_key_here
 # ============================================
 
 # Auth0 Configuration
-AUTH0_DOMAIN=devskyy.auth0.com
+AUTH0_DOMAIN=devskyy.us.auth0.com
 AUTH0_CLIENT_ID=DQRnklWEQkk6F1D5fhJK4Fjz5bVWXrVv
 AUTH0_CLIENT_SECRET=ltEkfUE1jZhlZqwzivRfmZnmKXe1zQDNRsoz60b_tG1C_VqXGxHXzxttYouFkMMe
 AUTH0_AUDIENCE=https://api.devskyy.com
