feat: Complete secure WordPress credentials management system
🔐 SECURE WORDPRESS CREDENTIALS INTEGRATION:

✅ CREDENTIAL MANAGEMENT SYSTEM (config/wordpress_credentials.py):
- Secure environment variable-based credential storage
- Support for multiple WordPress sites (production, staging)
- Comprehensive credential validation and error handling
- FTP/SFTP credentials support for multiple deployment methods
- Application password support for enhanced security
- Credential caching and management with thread safety

✅ ENVIRONMENT CONFIGURATION:
- Updated .env.template with WordPress credential sections
- Added all required and optional environment variables
- Secure credential handling with validation
- Support for Skyy Rose Collection primary and staging sites

✅ INTERACTIVE SETUP TOOLS:
- setup_wordpress_credentials.py - Interactive credential configuration
- WordPress connection testing and validation
- Automatic .env file generation and updates
- User-friendly credential collection with security prompts

✅ COMPREHENSIVE TESTING SUITE (test_wordpress_integration.py):
- Credential loading and validation tests
- WordPress REST API connection testing
- Theme package creation and validation tests
- Theme builder orchestrator integration tests
- API endpoint functionality tests

✅ MAIN APPLICATION INTEGRATION:
- Startup credential validation and loading
- Enhanced API endpoints with secure credential handling
- /api/v1/themes/skyy-rose/build - Skyy Rose specific theme building
- /api/v1/themes/credentials/status - Credential system status
- /api/v1/themes/credentials/test - WordPress connection testing

✅ THEME BUILDER ORCHESTRATOR UPDATES:
- Integration with secure credential system
- Skyy Rose Collection default brand guidelines
- Convenience methods for quick theme deployment
- Support for multiple WordPress sites and configurations

🛡️ SECURITY FEATURES:
- Environment variable-based credential storage (no hardcoded values)
- Application password support for WordPress 

--- a/.env.template
+++ b/.env.template
@@ -17,6 +17,39 @@ SECRET_KEY=REPLACE_WITH_SECURE_RANDOM_32_CHAR_STRING
 ANTHROPIC_API_KEY=sk-ant-REPLACE_WITH_YOUR_ANTHROPIC_KEY
 
 # ==============================================================================
+# WORDPRESS CREDENTIALS FOR SKYY ROSE COLLECTION
+# ==============================================================================
+
+# Primary Skyy Rose Collection Site (REQUIRED for theme deployment)
+SKYY_ROSE_SITE_URL=https://your-wordpress-site.com
+SKYY_ROSE_USERNAME=your-wp-admin-username
+SKYY_ROSE_PASSWORD=your-wp-admin-password
+
+# Application Password (RECOMMENDED - more secure than regular password)
+# Create in WordPress Admin > Users > Your Profile > Application Passwords
+SKYY_ROSE_APP_PASSWORD=your-application-password
+
+# FTP Credentials (OPTIONAL - for FTP deployment method)
+SKYY_ROSE_FTP_HOST=ftp.your-hosting-provider.com
+SKYY_ROSE_FTP_USERNAME=your-ftp-username
+SKYY_ROSE_FTP_PASSWORD=your-ftp-password
+SKYY_ROSE_FTP_PORT=21
+
+# SFTP Credentials (OPTIONAL - for SFTP deployment method)
+SKYY_ROSE_SFTP_HOST=sftp.your-hosting-provider.com
+SKYY_ROSE_SFTP_USERNAME=your-sftp-username
+SKYY_ROSE_SFTP_PASSWORD=your-sftp-password
+# OR use private key instead of password:
+# SKYY_ROSE_SFTP_PRIVATE_KEY=/path/to/your/private/key
+SKYY_ROSE_SFTP_PORT=22
+
+# Staging Site (OPTIONAL - for testing themes before production)
+SKYY_ROSE_STAGING_SITE_URL=https://staging.your-wordpress-site.com
+SKYY_ROSE_STAGING_USERNAME=staging-username
+SKYY_ROSE_STAGING_PASSWORD=staging-password
+SKYY_ROSE_STAGING_APP_PASSWORD=staging-app-password
+
+# ==============================================================================
 # DATABASE CONFIGURATION (Choose One)
 # ==============================================================================
 
