✨ Enterprise Refactor: Security, Syntax Fixes, CI/CD
MAJOR ENHANCEMENTS:
- ✅ Removed all hardcoded secrets (Truth Protocol compliance)
- ✅ Added comprehensive .env.example with secure key generation
- ✅ Implemented GitHub Actions CI/CD pipeline (.github/workflows/ci-cd.yml)
- ✅ Enhanced cleanup.sh with verifiable output
- ✅ Updated .gitignore to prevent backup files
- ✅ Fixed PyJWT version (2.11.0 → 2.10.1)
- ✅ Enhanced security documentation (SECURITY_CONFIGURATION_GUIDE.md)

SYNTAX FIXES (Production-Ready):
- ✅ Fixed advanced_ml_engine.py (import block corruption)
- ✅ Fixed forecasting_engine.py (missing closing paren)
- ✅ Fixed auth_manager.py (import ordering)
- ✅ Fixed cache_manager.py (Redis import indentation)
- ✅ Fixed database_optimizer.py (class structure corruption)
- ✅ Fixed performance_agent.py (misplaced len())
- ✅ Fixed integration_manager.py (parenthesis mismatch)
- ✅ Fixed email_sms_automation_agent.py (parenthesis mismatch)
- ✅ Fixed task_risk_manager.py (function signature)
- ✅ Fixed blockchain_nft_luxury_assets.py (JavaScript imports)
- ✅ Fixed agent_assignment_manager.py (sum() generator)
- ✅ Fixed claude_sonnet_intelligence_service_v2.py (sum() generator)

REPOSITORY CLEANUP:
- ✅ Removed fashion-ai-repo nested repository
- ✅ Removed duplicate theme directories
- ✅ Removed all backup files (*.backup, *.broken, main.py.*)

IMPACT:
- 🔒 Zero hardcoded secrets (Enterprise security baseline)
- 🚀 Full CI/CD pipeline with multi-platform testing
- 📦 Clean repository (no fluff/generic code)
- ✅ All critical syntax errors fixed (12 files)
- 📖 Comprehensive security documentation

STATUS: Production-ready for deployment

--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,15 @@ htmlcov/
 *.temp
 *.bak
 
+# Backup files (Truth Protocol: No backup files in repository)
+*.backup
+*.broken
+main.py.*
+!main.py
+*-backup/
+*-emergency-/
+*-EMERGENCY-*/
+
 # Database
 *.db
 *.sqlite
