--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,6 @@
 {
+  "$schema": "https://openapi.vercel.sh/vercel.json"
+}{
   "version": 2,
   "name": "devskyy-enterprise-platform",
   "framework": "other",
