--- a/.github/workflows/python-quality.yml
+++ b/.github/workflows/python-quality.yml
@@ -82,7 +82,7 @@ jobs:
 
       - name: Run tests with coverage
         run: |
-          pytest tests/ --cov=. --cov-report=xml --cov-report=term-missing
+          pytest tests/ --cov=. --cov-report=xml --cov-report=term-missing --cov-fail-under=90
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
