--- a/.github/workflows/enterprise-pipeline.yml
+++ b/.github/workflows/enterprise-pipeline.yml
@@ -4,7 +4,27 @@ name: DevSkyy Enterprise CI/CD Pipeline
 # Truth Protocol Rule #8: Test coverage >= 90%
 # Truth Protocol Rule #12: Performance SLOs - P95 < 200ms
 # Truth Protocol Rule #14: Error ledger required
-
+           
+  name: Cache
+  uses: actions/cache@v4.3.0
+  with:
+    # A list of files, directories, and wildcard patterns to cache and restore
+    path: 
+    # An explicit key for restoring and saving the cache
+    key: 
+    # An ordered multiline string listing the prefix-matched keys, that are used for restoring stale cache if no cache hit occurred for key. Note `cache-hit` returns false in this case.
+    restore-keys: # optional
+    # The chunk size used to split up large files during upload, in bytes
+    upload-chunk-size: # optional
+    # An optional boolean when enabled, allows windows runners to save or restore caches that can be restored or saved respectively on other platforms
+    enableCrossOsArchive: # optional, default is false
+    # Fail the workflow if cache entry is not found
+    fail-on-cache-miss: # optional, default is false
+    # Check if a cache entry exists for the given input(s) (key, restore-keys) without downloading the cache
+    lookup-only: # optional, default is false
+    # Run the post step to save the cache even if another step before fails
+    save-always: # optional, default is false
+          
 on:
   push:
     branches: [main, develop, 'claude/**']
@@ -287,6 +307,8 @@ jobs:
   compliance:
     name: Truth Protocol Compliance
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     needs: [lint, type-check, security, test]
     if: always()
     steps:
